[gd_scene load_steps=9 format=3 uid="uid://y5ghr7deyugp"]

[ext_resource type="Texture2D" uid="uid://bs5frcdflwdyw" path="res://gfx/gui/death_notice/title.png" id="1"]
[ext_resource type="Texture2D" uid="uid://djnxf8junr7h3" path="res://gfx/gui/death_notice/title_border.png" id="2"]
[ext_resource type="Script" path="res://scenes/PlayerUI/DeathNotice/DeathNotice.gd" id="3"]
[ext_resource type="AudioStream" uid="uid://c2l1r46k86kv3" path="res://sfx/player/player_death_alarm.wav" id="4"]

[sub_resource type="Shader" id="1"]
code = "shader_type canvas_item;

uniform float blur_amount : hint_range(0, 5);
uniform sampler2D SCREEN_TEXTURE : hint_screen_texture, filter_linear_mipmap;

void fragment() {
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur_amount);
}
"

[sub_resource type="ShaderMaterial" id="2"]
shader = SubResource("1")
shader_parameter/blur_amount = 1.0

[sub_resource type="Animation" id="3"]
resource_name = "fade"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeAnimation/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_133h5"]
_data = {
"fade": SubResource("3")
}

[node name="DeathNotice" type="Node2D"]
visible = false
script = ExtResource("3")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("2")
offset_right = 1024.0
offset_bottom = 600.0

[node name="Border" type="Sprite2D" parent="."]
position = Vector2(512, 300)
texture = ExtResource("2")

[node name="Title" type="Sprite2D" parent="."]
texture = ExtResource("1")
offset = Vector2(512, 300)

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartPause" type="Timer" parent="."]
one_shot = true

[node name="FadeAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_133h5")
}

[node name="CanvasModulate" type="CanvasModulate" parent="FadeAnimation"]

[node name="AlarmSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4")
volume_db = -12.0

[connection signal="timeout" from="BlinkTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="StartPause" to="." method="_on_StartPause_timeout"]
[connection signal="animation_finished" from="FadeAnimation" to="." method="_on_AnimationPlayer_animation_finished"]
